force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/vlocity_cmt__AssessmentQuestion__c.object-meta.xml
<CustomObject>
    <description>Represents a question answered on an Assessment. When defined for an assessment template, this represents the definition of a question requiring an answer.</description>
    <label>Assessment Question</label>
    <nameField>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>