force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/fields/vlocity_cmt__AssessmentDateFormat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssessmentDateFormat__c</fullName>
    <formula>vlocity_cmt__AssessmentId__r.vlocity_cmt__DateFormat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Date Format</label>
    <type>Text</type>
</CustomField>