force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/fields/vlocity_cmt__IsTemplateQuestion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsTemplateQuestion__c</fullName>
    <formula>vlocity_cmt__AssessmentId__r.vlocity_cmt__IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Question</label>
    <type>Checkbox</type>
</CustomField>