force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/fields/vlocity_cmt__ParentAssessmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentAssessmentId__c</fullName>
    <formula>vlocity_cmt__ParentQuestion__r.vlocity_cmt__AssessmentId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAssessmentId</label>
    <type>Text</type>
</CustomField>