force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/fields/vlocity_cmt__QuestionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuestionType__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Free-text</fullName>
            </value>
            <value>
                <fullName>Instruction</fullName>
            </value>
            <value>
                <fullName>Multi-select</fullName>
            </value>
            <value>
                <fullName>Single Select</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Question Table Single Select</fullName>
            </value>
            <value>
                <fullName>Question Table MultiSelect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>