force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__Checkbox.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Checkbox</fullName>
    <active>true</active>
    <label>Checkbox</label>
</RecordType>