force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__Date.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>