force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__FreeText.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__FreeText</fullName>
    <active>true</active>
    <label>Free Text</label>
</RecordType>