force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__Instruction.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Instruction</fullName>
    <active>true</active>
    <label>Instruction</label>
</RecordType>