force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__MultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__MultiSelect</fullName>
    <active>true</active>
    <label>Multi Select</label>
</RecordType>