force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__Number.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Number</fullName>
    <active>true</active>
    <label>Number</label>
</RecordType>