force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__QuestionTableMultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__QuestionTableMultiSelect</fullName>
    <active>true</active>
    <label>Question Table Multi Select</label>
</RecordType>