force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__QuestionTableSingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__QuestionTableSingleSelect</fullName>
    <active>true</active>
    <label>Question Table Single Select</label>
</RecordType>