force-app/main/default/objects/vlocity_cmt__AssessmentQuestion__c/recordTypes/vlocity_cmt__SingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__SingleSelect</fullName>
    <active>true</active>
    <label>Single Select</label>
</RecordType>